# mapexec

./: CMakeLists.txt  README.md
include/: global.hpp  pe.hpp  wintypes.hpp
mapexec/include/: global.hpp  inject.hpp  ntfunctions.hpp  pe.hpp  resolver.hpp  status.hpp  utils.hpp  wintypes.hpp
mapexec/src/: inject.cpp  main.cpp  resolver.cpp  utils.cpp
src/: main.cpp  resolver.cpp  utils.cpp
utils/: hashing.c  obfuscate.c
